first version of template announcement

--- a/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
+++ b/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
@@ -1,38 +1,157 @@
-<form [formGroup]="form" class="row g-3 mb-4">
-  <div class="col-md-6" *ngFor="let field of service.assoServiceFieldTypes">
-    <tr>
-      <td *ngIf="field.dataType==SERVICE_FIELD_TYPE_TEXT">
-        <generic-input [(model)]="field.stringValue" [label]="field.label" [form]="serviceForm"
-          [propertyName]='"stringFieldType"+i' [isDisabled]="!editMode" [isMandatory]="assoServiceFieldType.isMandatory"
-          [maxLength]="255"></generic-input>
-      </td>
-      <td *ngIf="field.dataType==SERVICE_FIELD_TYPE_TEXTAREA">
-        <generic-textarea [(model)]="assoServiceFieldType.textAreaValue" [label]="field.label" [form]="serviceForm"
-          [propertyName]='"textAreaFieldType"+i' [isDisabled]="!editMode"
-          [isMandatory]="assoServiceFieldType.isMandatory"></generic-textarea>
-      </td>
-      <td *ngIf="field.dataType==SERVICE_FIELD_TYPE_DATE">
-        <generic-datepicker [(model)]="assoServiceFieldType.dateValue" [label]="field.label" [form]="serviceForm"
-          [propertyName]='"dateFieldType"+i' [isMandatory]="assoServiceFieldType.isMandatory"
-          [isDisabled]="!editMode"></generic-datepicker>
-      </td>
-      <td *ngIf="field.dataType==SERVICE_FIELD_TYPE_INTEGER">
-        <generic-input [(model)]="assoServiceFieldType.integerValue" [label]="field.label" [form]="serviceForm"
-          [propertyName]='"integerFieldType"+i' [isMandatory]="assoServiceFieldType.isMandatory"
-          [isDisabled]=" !editMode" type="number"></generic-input>
-      </td>
-      <td *ngIf="field.dataType==SERVICE_FIELD_TYPE_SELECT">
-        <select-value-service-field-type [(model)]="assoServiceFieldType.selectValue" [label]="field.label"
-          [form]="serviceForm" [propertyName]='"selectFieldType"+i' [serviceFieldType]="field"
-          [isMandatory]="assoServiceFieldType.isMandatory" [isDisabled]="!editMode"></select-value-service-field-type>
-      </td>
-    </tr>
-    <!-- <generic-input [label]="field.label" [form]="form" [propertyName]="field.key" [isMandatory]="true"
-      [isDisabled]="false" type="text">
-    </generic-input> -->
-  </div>
-</form>
+<div class="container">
+  <div class="row">
 
-<div class="p-3 border rounded">
-  <div class="mb-0 text-wrap" [innerHTML]="displayText"></div>
+    <div class="col-md-7">
+      <form [formGroup]="form" class="mb-4" *ngIf="service && service.assoServiceFieldTypes">
+
+        <!--============== GENERIC BLOC ===============-->
+        <!-- Block title -->
+        <h6>Champs génériques</h6>
+
+        <div class="d-flex gap-2 flex-wrap">
+
+          <!-- Loop over placeholder entries -->
+          <div class="" *ngFor="let placeholder of placeholdersMap.get('#')">
+
+            <!-- TEXT -->
+            <div>
+              <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXT" [(model)]="placeholder.label"
+                [label]="placeholder.label" [form]="form" [propertyName]="placeholder.code + '_' + placeholder.id"
+                [isDisabled]="false" [isMandatory]="false" [maxLength]="255">
+              </generic-input>
+            </div>
+
+            <!-- TEXTAREA -->
+            <div>
+              <generic-textarea *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXTAREA"
+                [(model)]="placeholder.value" [label]="placeholder.label" [form]="form"
+                [propertyName]="placeholder.code + '_' + placeholder.id" [isDisabled]="false" [isMandatory]="false">
+              </generic-textarea>
+            </div>
+
+            <!-- DATE -->
+            <div>
+              <generic-date-picker *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_DATE"
+                [(model)]="placeholder.value" [label]="placeholder.label" [form]="form"
+                [propertyName]="placeholder.code + '_' + placeholder.id" [isMandatory]="false" [isDisabled]="false">
+              </generic-date-picker>
+            </div>
+
+            <!-- INTEGER -->
+            <div>
+              <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_INTEGER" [(model)]="placeholder.value"
+                [label]="placeholder.label" [form]="form" [propertyName]="placeholder.code + '_' + placeholder.id"
+                [isMandatory]="false" [isDisabled]="false" type="number">
+              </generic-input>
+            </div>
+
+            <!-- SELECT -->
+            <div>
+              <select-value-service-field-type *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_SELECT"
+                [(model)]="placeholder.value" [label]="placeholder.label" [form]="form"
+                [propertyName]="placeholder.code + '_' + placeholder.id" [serviceFieldType]="placeholder"
+                [isMandatory]="false" [isDisabled]="false">
+              </select-value-service-field-type>
+            </div>
+
+            <!-- DEFAULT / UNKNOWN -->
+            <div>
+              <generic-input *ngIf="!placeholder.dataType" [model]="placeholder.value"
+                [label]="placeholder.label ? placeholder.label : placeholder.code" [form]="form"
+                [propertyName]="placeholder.code + '_' + placeholder.id" [isMandatory]="true" [isDisabled]="false"
+                type="text">
+              </generic-input>
+            </div>
+          </div>
+        </div>
+
+        <!--============== FRAGMENT BLOCS ===============-->
+        <div *ngFor="let selections of fragmentSelection; let i = index">
+
+          <!-- Block title -->
+          <div class="mt-5 mb-3">
+            <hr>
+            <h6>{{ selections.length > 0 ?
+              getArrayInString(selections) : "Champs spécifiques : " + selections }}</h6>
+          </div>
+
+          <select-announcement-notice-template-fragment *ngIf="selections.length>1" [types]="selections"
+            [(model)]="selectedFragments[i]" label="Selectionner" [form]="form" [propertyName]="'select'+selections+i"
+            [isMandatory]="false"></select-announcement-notice-template-fragment>
+
+          <generic-toggle *ngIf="selections.length==1" (onFormChange)="changeToggleValue($event, i)"
+            label="Selectionner" [form]="form" [propertyName]="'toggle'+selections+i"
+            [isMandatory]="false"></generic-toggle>
+
+          <!-- Loop over placeholder entries -->
+          <div *ngIf="selectedFragments[i]">
+            <div class="my-4" *ngFor="let placeholder of placeholdersMap.get(selectedFragments[i]!.code)">
+
+              <!-- Wrap inputs automatically to next line -->
+              <div class="row g-3 flex-wrap">
+
+                <!-- TEXT -->
+                <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXT" [(model)]="placeholder.label"
+                  [label]="placeholder.label" [form]="form" [propertyName]="selectedFragments[i]!.code !== '#' 
+                  ? selectedFragments[i]!.code + '_' + placeholder.code + '_' + placeholder.id 
+                  : placeholder.code + '_' + placeholder.id" [isDisabled]="false" [isMandatory]="false"
+                  [maxLength]="255">
+                </generic-input>
+
+                <!-- TEXTAREA -->
+                <generic-textarea *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_TEXTAREA"
+                  [(model)]="placeholder.value" [label]="placeholder.label" [form]="form" [propertyName]="selectedFragments[i]!.code !== '#' 
+                  ? selectedFragments[i]!.code + '_' + placeholder.code + '_' + placeholder.id 
+                  : placeholder.code + '_' + placeholder.id" [isDisabled]="false" [isMandatory]="false">
+                </generic-textarea>
+
+                <!-- DATE -->
+                <generic-date-picker *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_DATE"
+                  [(model)]="placeholder.value" [label]="placeholder.label" [form]="form" [propertyName]="selectedFragments[i]!.code !== '#' 
+                  ? selectedFragments[i]!.code + '_' + placeholder.code + '_' + placeholder.id 
+                  : placeholder.code + '_' + placeholder.id" [isMandatory]="false" [isDisabled]="false">
+                </generic-date-picker>
+
+                <!-- INTEGER -->
+                <generic-input *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_INTEGER" [(model)]="placeholder.value"
+                  [label]="placeholder.label" [form]="form" [propertyName]="selectedFragments[i]!.code !== '#' 
+                  ? selectedFragments[i]!.code + '_' + placeholder.code + '_' + placeholder.id 
+                  : placeholder.code + '_' + placeholder.id" [isMandatory]="false" [isDisabled]="false" type="number">
+                </generic-input>
+
+                <!-- SELECT -->
+                <select-value-service-field-type *ngIf="placeholder.dataType === SERVICE_FIELD_TYPE_SELECT"
+                  [(model)]="placeholder.value" [label]="placeholder.label" [form]="form" [propertyName]="selectedFragments[i]!.code !== '#' 
+                  ? selectedFragments[i]!.code + '_' + placeholder.code + '_' + placeholder.id 
+                  : placeholder.code + '_' + placeholder.id" [serviceFieldType]="placeholder" [isMandatory]="false"
+                  [isDisabled]="false">
+                </select-value-service-field-type>
+
+                <!-- DEFAULT / UNKNOWN -->
+                <generic-input *ngIf="!placeholder.dataType" [model]="placeholder.value"
+                  [label]="placeholder.label ? placeholder.label : placeholder.code" [form]="form" [propertyName]="selectedFragments[i]!.code !== '#' 
+                  ? selectedFragments[i]!.code + '_' + placeholder.code + '_' + placeholder.id 
+                  : placeholder.code + '_' + placeholder.id" [isMandatory]="true" [isDisabled]="false" type="text">
+                </generic-input>
+
+              </div>
+            </div>
+            <div *ngIf="selectedFragments[i]!.isMultiple">
+              <a class="btn btn-primary">Ajouter {{selectedFragments[i]!.label}}</a>
+
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <!-- Preview section - 1/3 of width -->
+    <div class="col-md-5">
+      <h2 class="text-center">Annonce légale</h2>
+      <div class="p-3 border rounded">
+        <div class="mb-0 text-wrap" [innerHTML]="displayText | trustHtml"></div>
+      </div>
+    </div>
+
+  </div>
 </div>
