--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -151,7 +151,8 @@
                       [isDisabled]="false"></generic-textarea>
                   </div> -->
                 </div>
-                <notice-template [template]="assoServiceProvitionType.noticeTemplate"></notice-template>
+                <notice-template
+                  [service]="quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex]"></notice-template>
 
               </div>
 
