--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
@@ -677,27 +677,24 @@
         </div>
 
         <div class="border-top pt-4 mb-3">
-          <div *ngIf="!quotation.voucher || (quotation.voucher && (!discountAmountTotal || discountAmountTotal==0))"
-            class="input-group input-group-sm border-dashed">
+          <div *ngIf="quotation && quotation.voucher && (!quotation.voucher.code || quotation.voucher.code.length==0)
+            && (!voucherCode || (voucherCode && voucherCode.length==0))"
+            class="input-group input-group-sm border-dashed ">
             <input class="form-control text-uppercase" [(ngModel)]="voucherCode" type="text"
               placeholder="Code de réduction">
-            <div *ngIf="isComputingPrice && voucherCode" class="spinner-border spinner-border-sm" role="status">
+            <div *ngIf="isComputingPrice && voucherCode && voucherCode.length>0"
+              class="spinner-border spinner-border-sm" role="status">
               <span class="visually-hidden"></span>
             </div>
             <button class="btn btn-secondary" type="button" (click)="applyVoucher()">Appliquer</button>
           </div>
         </div>
         <ul class="list-unstyled pt-3 mb-0">
-          <li
-            *ngIf="quotation && quotation.voucher && quotation.voucher.id && discountAmountTotal && discountAmountTotal>0"
+          <li *ngIf="quotation && quotation.voucher && quotation.voucher.id"
             class="d-flex justify-content-between mb-2">
             Code appliqué : {{quotation.voucher.code}}
             <br>
-            Réduction appliquée :
-            <div *ngIf="discountAmountTotal && discountAmountTotal>0">
-              <span class="fw-semibold ms-2">{{discountAmountTotal |
-                currency:'EUR'}}</span>
-            </div>
+            Réduction appliquée : {{discountAmountTotal |currency:'EUR'}}
             <a class="nav-link fs-xl p-2" (click)="deleteVoucherPricing()">
               <i class="ai-trash"></i>
             </a>
