--- a/client-myjss/src/assets/css/theme-account.css
+++ b/client-myjss/src/assets/css/theme-account.css
@@ -6696,7 +6696,7 @@ html.theme-account[data-bs-theme=light] {
   width: var(--ar-spinner-width);
   height: var(--ar-spinner-height);
   vertical-align: var(--ar-spinner-vertical-align);
-  border-radius: 50%;
+  border-radius: 50% !important;
   animation: var(--ar-spinner-animation-speed) linear infinite var(--ar-spinner-animation-name);
 }
 
