--- a/src/main/resources/mails/templates/quotation-page.html
+++ b/src/main/resources/mails/templates/quotation-page.html
@@ -211,34 +211,38 @@
             </td>
         </tr>
     </table>
-    <div class="page-break"></div>
-    <table>
-        <tr>
-            <td><img width="690px" th:src="@{classpath:/images/invoice-page1-header.png}" src="picture.png" />
-            </td>
-        </tr>
-    </table>
-    <table style="width:690px">
-        <tr>
-            <td style="font-size: 20px;text-align: center;font-weight: bolder;">Liste des pièces jointes à fournir</td>
-        </tr>
-    </table>
-    <p>Pour la réalisation de ce devis, la liste des pièces jointes suivantes est usuellement nécessaire :</p>
-    <ul>
-        <th:block th:if="${assos!=null}" th:each="asso : ${assos}">
-            <th:block th:if="${asso.services!=null} and ${service.assoServiceDocuments!=null}"
-                th:each="service : ${asso.services}">
-                <li><span th:text="${service.serviceLabelToDisplay}"></span> : </li>
-                <ul>
-                    <li th:if="${service.assoServiceDocuments!=null}"
-                        th:each="assoServiceDocument : ${service.assoServiceDocuments}">
-                        <span th:if="${assoServiceDocument.isMandatory}"
-                            th:text="${assoServiceDocument.typeDocument.customLabel}"></span>
-                    </li>
-                </ul>
+    <div th:if="${hasDocuments}">
+        <div class="page-break"></div>
+        <table>
+            <tr>
+                <td><img width="690px" th:src="@{classpath:/images/invoice-page1-header.png}" src="picture.png" />
+                </td>
+            </tr>
+        </table>
+        <table style="width:690px">
+            <tr>
+                <td style="font-size: 20px;text-align: center;font-weight: bolder;">Liste des pièces jointes à fournir
+                </td>
+            </tr>
+        </table>
+        <p>Pour la réalisation de ce devis, la liste des pièces jointes suivantes est
+            usuellement nécessaire :</p>
+        <ul>
+            <th:block th:if="${assos!=null}" th:each="asso : ${assos}">
+                <th:block th:if="${asso.services!=null} and ${service.assoServiceDocuments!=null}"
+                    th:each="service : ${asso.services}">
+                    <li><span th:text="${service.serviceLabelToDisplay}"></span> : </li>
+                    <ul>
+                        <li th:if="${service.assoServiceDocuments!=null}"
+                            th:each="assoServiceDocument : ${service.assoServiceDocuments}">
+                            <span th:if="${assoServiceDocument.isMandatory}"
+                                th:text="${assoServiceDocument.typeDocument.customLabel}"></span>
+                        </li>
+                    </ul>
+                </th:block>
             </th:block>
-        </th:block>
-    </ul>
+        </ul>
+    </div>
     <div class="page-break"></div>
     <table>
         <tr>
