--- a/src/main/resources/mails/templates/customer-order-in-progress.html
+++ b/src/main/resources/mails/templates/customer-order-in-progress.html
@@ -211,12 +211,12 @@
                                                                 <p>Nous vous confirmons le traitement de votre commande.
                                                                 </p>
                                                                 <p>Elle sera traitée dans les meilleurs délais par <span
-                                                                        th:text="${customerOrder.assoAffaireOrders[0].provision[0].assignedTo.firstname}"></span>
+                                                                        th:text="${customerOrder.assoAffaireOrders[0].provisions[0].assignedTo.firstname}"></span>
                                                                     <span
-                                                                        th:text="${customerOrder.assoAffaireOrders[0].provision[0].assignedTo.lastname}"></span>
+                                                                        th:text="${customerOrder.assoAffaireOrders[0].provisions[0].assignedTo.lastname}"></span>
                                                                     (<span
                                                                         style="color:rgb(35, 61, 86);; text-decoration:none"><span
-                                                                            th:text="${customerOrder.assoAffaireOrders[0].provision[0].assignedTo.mail}"></span></span>)
+                                                                            th:text="${customerOrder.assoAffaireOrders[0].provisions[0].assignedTo.mail}"></span></span>)
                                                                     et toute son équipe.
                                                                 </p>
                                                                 <p>Sauf avis contraire et immédiat de votre part, la
